# tui-menu

./: .gitignore  README.md  pyproject.toml  setup.py
tui-menu/: Menu.py  __init__.py
tui_menu/: __init__.py
